2010-07-29  Allin Cottrell  <cottrell@wfu.edu>

	* src/term.c src/term_api.h term/emf.trm term/svg.trm docs/gnuplot.doc:
	Add support for codepage 950, which is Microsoft's version of Chinese
	Big5 encoding.  Only the emf terminal (and maybe svg) do anything useful
	with it.   "set encoding cp950"

2010-07-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/estimate.trm:  Always estimate escaped characters as requiring
	one character width.
	Bug #3036010

2010-07-27  Tim Mooney  <enchanter@users.sourceforge.net>

	* configure.in:  If lua.pc is not present but liblua.so is found
	anyhow,  then set HAVE_LUA and LUA_LIBS explicitly.
	Bug #3035608

2010-07-26  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/win.trm src/win/wgraph.c:  Yet another windows terminal font fix.
	Bug #2972307

2010-07-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  "set term canvas fontscale <fs>"

	* src/graphics.c (do_plot do_key_layout): Separate out the code that
	allocates space for the graph legend, and collect the key sample code
	into a single place.

2010-07-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: typos
	* docs/term-ja.diff docs/gnuplot-ja.doc:
	Sync Japanese documentation to gnuplot.doc rev 1.617

2010-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c: Remove magic number -3 and the test (foo>=-2) in
	favor of LT_NODRAW and test (foo!=LT_NODRAW).

	* src/hidden3d.c:  #define PT_ARROWHEAD and PT_BACKARROW
	* src/hidden3d.c (make_edge draw_edge build_networks) src/util3d.c
	(draw3d_line_unconditional):
	Handle arrow heads and other arrow style parameters in hidden3d mode.
	For surfaces, edge.style indicates whether this edge is seen from the
	top or the bottom.  Coopt this flag for VECTOR plots to indicate
	whether the vector points up (positive z) or down (negative z).
	Separate flag is needed because the end points are sorted on z.

2010-07-11  Peter Juhasz  <juhaszp@users.sourceforge.net>